--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Dog Cafe</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="fontawesome/css/fontawesome.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 </head>
@@ -39,11 +42,11 @@
                         </li>
                     </ul>
                     <div class="SNS">
-                        <i class="fa fa-facebook-official sns-links-mobile"></i>
-                        <i class="fa fa-twitter sns-links-mobile"></i>
-                        <i class="fa fa-instagram sns-links-mobile"></i>
+                        <i class="fab fa-facebook-square sns-links-mobile"></i>
+                        <i class="fab fa-twitter sns-links-mobile"></i>
+                        <i class="fab fa-instagram sns-links-mobile"></i>
                     </div>
-                    <i id="close-nav" class="fa fa-close" style="color: white;"></i>
+                    <i id="close-nav" class="fa fa-window-close" style="color: white;"></i>
 
             </nav>
         </div>
@@ -180,9 +183,9 @@
             <div class="sns-section">
                 <div class="h1-heading-sns">FOLLOW ME!</div>
                 <div class="SNS-2">
-                    <i class="fa fa-facebook-official sns-links-mobile2"></i>
-                    <i class="fa fa-twitter sns-links-mobile2"></i>
-                    <i class="fa fa-instagram sns-links-mobile2"></i>
+                    <i class="fab fa-facebook-square sns-links-mobile2"></i>
+                    <i class="fab fa-twitter sns-links-mobile2"></i>
+                    <i class="fab fa-instagram sns-links-mobile2"></i>
                 </div>
             </div>
         </div>
